# tweepy-examples

./: .gitignore  README.md  inactive_followed.py  setup.cfg
src/tweepy_clean/: __init__.py
