[metadata]
name = tweepy_clean
version = 0.5.0
author = Michael Hirsch
author_email = scivision@users.noreply.github.com
description = Simple Tweepy use of Twitter API
url = https://github.com/scivision/tweepy_clean
keywords =
  twitter
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Developers
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Utilities
license_files =
  LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
zip_safe = False
include_package_data = True
install_requires =
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
